fix: asc/desc arrows not aligned

--- a/src/sortableTable.core-styles.css
+++ b/src/sortableTable.core-styles.css
@@ -14,6 +14,7 @@ button.js-sort {
     line-height: inherit;
     height: 1lh;
     justify-content: start;
+    align-items: baseline;
     vertical-align: baseline;
   }
   &.btn-link {
